# RPi-Pico-SD-Card-Module

./: .gitignore  CMakeLists.txt  README.md  hw_config.c  main.cpp  pinouts.txt
lib/: CMakeLists.txt  data_logger.cpp  data_logger.h  hw_config.c  hw_config.h  sd_card.c  sd_spi.c
